Add PriceRunner API integration
